[gd_scene load_steps=5 format=3 uid="uid://by4s26lcdgvks"]

[ext_resource type="Script" uid="uid://b8wpombr1tivn" path="res://level_select_menu.gd" id="1_5q5op"]
[ext_resource type="Texture2D" uid="uid://pbymrsl40tcu" path="res://assets/level1_back.png" id="1_mflmt"]
[ext_resource type="FontFile" uid="uid://d2nru40cvlo4a" path="res://assets/font/upheavtt.ttf" id="2_5q5op"]
[ext_resource type="FontFile" uid="uid://yhm7ns2odjyy" path="res://assets/font/Pixellari.ttf" id="3_q8ig5"]

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5q5op")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 699.0
scale = Vector2(0.515, 0.515)
texture = ExtResource("1_mflmt")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 72.0
offset_right = 80.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5q5op")
text = "Select Level"
horizontal_alignment = 1

[node name="LevelsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_q8ig5")
text = "Back"
